<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#688FDE"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/txt_read_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/txt_read_block"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30dp" />

    <EditText
        android:id="@+id/ed_txt_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_read_block_num"
        android:fontFamily="sans-serif-black"
        android:textAlignment="center"
        android:background="#FFFFFF"
        android:textColor="#000000"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/txt_read_apt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/txt_read_apt"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30dp" />

    <EditText
        android:id="@+id/ed_txt_read_apt_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/txt_read_apt_num"
        android:inputType="number"
        android:textAlignment="center"
        android:background="#FFFFFF"
        android:textColor="#000000"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/txt_read_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/txt_read_data"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30dp" />

    <EditText
        android:id="@+id/ed_txt_read_in_read_vol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:inputType="number"
        android:textAlignment="viewEnd"
        android:text="@string/txt_read_data_value"
        android:textColor="#000000"
        android:textSize="30dp" />

    <Button
        android:id="@+id/btn_read_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_read_next" />

    <Button
        android:id="@+id/btn_read_previous"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_read_previous" />

    <Button
        android:id="@+id/btn_read_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_read_finish" />

</LinearLayout>