<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3333ff"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/txt_home_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/txt_home_welcome"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="40dp" />

    <TextView
        android:id="@+id/txt_home_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/txt_home_options"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="35dp" />

    <Button
        android:id="@+id/btn_home_init"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_home_init" />

    <Button
        android:id="@+id/btn_home_last_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_home_last_sheet" />

    <Button
        android:id="@+id/btn_home_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_home_about" />
</LinearLayout>