<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#00BCD4"
    >

    <TextView
        android:id="@+id/txt_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/txt_finish_sheet"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="40dp" />

    <Button
        android:id="@+id/btn_finish_save_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_finish_sheet" />

    <Button
        android:id="@+id/btn_finish_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_finish_home" />

</LinearLayout>